# examples

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
applet/libapplet-launch/: Cargo.toml
applet/libapplet-launch/src/: main.rs
fs-api/: Cargo.toml
fs-api/dir-list/: Cargo.toml
fs-api/dir-list/src/: main.rs
fs-api/file-rw/: Cargo.toml
fs-api/file-rw/src/: main.rs
fs-api/src/: main.rs
graphics/console-interactive/: Cargo.toml
graphics/console-interactive/src/: main.rs
graphics/console-write/: Cargo.toml
graphics/console-write-random/: Cargo.toml
graphics/console-write-random/src/: main.rs
graphics/console-write/src/: main.rs
graphics/gpu-simple/: Cargo.toml
graphics/gpu-simple/src/: main.rs  ui2d.rs
graphics/gpu-simple2/: Cargo.toml
graphics/gpu-simple2/src/: main.rs
graphics/simple-window/: Cargo.toml  npdm.json
graphics/simple-window/src/: main.rs  ui2d.rs
graphics/ui2d/: Cargo.toml
graphics/ui2d/src/: lib.rs
input/: Cargo.toml
input/src/: main.rs
net/chat/: Cargo.toml
net/chat/src/: main.rs
net/echo/: Cargo.toml
net/echo/src/: main.rs
net/net-log/: Cargo.toml
net/net-log/src/: main.rs
os/thread_panic/: Cargo.toml
os/thread_panic/src/: main.rs
os/threads/: Cargo.toml
os/threads/src/: main.rs
server-ipc/ams-ecs/: Cargo.toml
server-ipc/ams-ecs/src/: main.rs
server-ipc/lm/: Cargo.toml  npdm.json
server-ipc/lm/src/: ipc.rs  logger.rs  main.rs
server-ipc/prepo-mitm/: Cargo.toml  npdm.json
server-ipc/prepo-mitm/src/: main.rs  prepo.rs
server-ipc/simple-mitm-service/client/: Cargo.toml  build.sh  nacp.json
server-ipc/simple-mitm-service/client/src/: main.rs
server-ipc/simple-mitm-service/server/: Cargo.toml  npdm.json
server-ipc/simple-mitm-service/server/src/: main.rs
server-ipc/simple-service/client/: Cargo.toml
server-ipc/simple-service/client/src/: main.rs
server-ipc/simple-service/server/: Cargo.toml  aarch64-none-elf.json  npdm.json
server-ipc/simple-service/server/src/: lib.rs  main.rs
test/sync/rwlock/: Cargo.toml
test/sync/rwlock/src/: main.rs
