[workspace]
resolver = "2"

members = [
    "applet/libapplet-launch",
    "fs-api/*",
    "graphics/gpu-simple",
    "graphics/gpu-simple2",
    "graphics/simple-window",
    "input",
    "os/*",
    "server-ipc/lm",
    "server-ipc/prepo-mitm",
    "server-ipc/simple-mitm-service/client",
    "server-ipc/simple-mitm-service/server",
    "server-ipc/simple-service/client",
    "server-ipc/simple-service/server",
    "test/sync/rwlock",
]

[workspace.dependencies.nx]
git = "https://github.com/aarch64-switch-rs/nx"
tag = "0.2.2"

[profile.release]
debug = true

[profile.dev]
panic = "unwind"
