[package]
name = "input"
authors = ["aarch64-switch-rs authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx", features = [ "input" ] }

[package.metadata.nx.nro]
nacp = { default_name = "input", default_author = "aarch64-switch-rs authors", version = "Example" }