[package]
name = "console-write-random"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
embedded-term = "0.1.1"
nx = { workspace = true , features = [ "input", "fs", "vty", "rand" ] }

[package.metadata.nx.nro]
nacp = { default_name = "console-write-random", default_author = "XorTroll", version = "Example" }
