[package]
name = "gpu-simple"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx", features = [ "input" ] }
ui2d = { path = "../ui2d" }

[package.metadata.nx.nro]
nacp = { default_name = "gpu-simple", default_author = "XorTroll", version = "Example" }
