[package]
name = "simple-window"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx" }
ui2d = { path = "../ui2d" }

[dependencies.libm]
version = "0.2.1"
default-features = false
features = []

[package.metadata.nx.nsp]
npdm = "npdm.json"