[package]
name = "simple-window"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
nx = { workspace = true, features = [ "input", "canvas"] }

[dependencies.libm]
version = "0.2.1"
default-features = false
features = []

[package.metadata.nx.nro]
overlay = true
nacp = { default_name = "simple-window", default_author = "XorTroll", version = "Example" }