[package]
name = "ui2d"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
nx = { git = "https://github.com/aarch64-switch-rs/nx", features = ["gpu"] }

[dependencies.font8x8]
version = "0.2"
default-features = false
features = ["unicode"]

[dependencies.rusttype]
version = "0.9.2"
default-features = false
features = ["libm-math"]

[dependencies.libm]
version = "0.2.1"
default-features = false
features = []
