[package]
name = "ui2d"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
libm = "0.2.11"
#num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
nx = { workspace = true , features = [ "gpu" ] }

[dependencies.ab_glyph]
version = "0.2"
default-features = false
features = ["variable-fonts", "libm"]

[dependencies.font8x8]
version = "0.3"
default-features = false
features = ["unicode"]

