[package]
name = "telnet-chat-server"
version = "0.1.0"
authors = ["Pantsman0"]
edition = "2024"

[dependencies]
nx = { workspace = true, features = ["input", "socket", "fs"] }
hashbrown = { version = "*", default-features = true }


[package.metadata.nx.nro]
nacp = { default_name = "telnet-chat-server", default_author = "Pantsman0", version = "Example" }
