[package]
name = "simple-mitm-service-client"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
nx = { workspace = true, features = [ "services" ] }
paste = "1.0"

[package.metadata.nx.nro]
nacp = { default_name = "simple-mitm-service-client", default_author = "XorTroll", version = "Example" }