[package]
name = "simple-service-client"
version = "0.1.0"
authors = ["XorTroll"]
edition = "2021"

[dependencies]
simple-service-server ={ path = "../server"}
nx = { workspace = true, features = [ "services" ] }
paste = "1.0"

[package.metadata.nx.nro]
nacp = { default_name = "simple-service-client", default_author = "XorTroll", version = "Example" }